fixed issues on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,20 @@
   line-height: 42px;
 }
 
+.Typewriter__cursor {
+  color: white;
+  font-size: 25px;
+}
+
+@media screen and (max-width: 600px) {
+  .Typewriter__wrapper {
+    font-size: 20px;
+  }
+  .Typewriter__cursor {
+    font-size: 18px !important;
+  }
+}
+
 @media screen and (max-width: 992px) {
   #root {
     padding: 1.2rem;
